fix align

--- a/src/components/page-search/page-search.pcss
+++ b/src/components/page-search/page-search.pcss
@@ -1,5 +1,5 @@
 .page-search {
-    &__page, &__title {
+    &__page, &__title, &__no-result {
         text-align: center;
     }
     &__wrapper {
